2008-12-25 23:46-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCProject.m
	* Headers/ProjectCenter/PCProject.h: Added notification 
	for hitting a breakpoint.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Added code
	to detect when a breakpoint is hit.

2008-12-25 10:30-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/GNUmakefile: Added PTYView.[hm]
	* Modules/Debuggers/ProjectCenter/PCDebugger.[hm]: Simplified to 
	call PCDebuggerView instance with the program to start.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.[hm]: Refactored
	into a subclass of PTYView.
	* Modules/Debuggers/ProjectCenter/PTYView.[hm]: pty based terminal
	view which allows us to read and write from a pseudo-terminal.
	The code in the master/slave methods was inspired by an example
	given in "UNIX Network Programming" by W. Richard Stevens and also
	Nicola Vitacolonna.
	* Modules/Debuggers/ProjectCenter/Resources/PCDebugger.gorm: Added
	PTYView and made the PCDebuggerView a subclass of it.   Also made
	the window release when closed so that the gdb process gets 
	terminated.

2008-12-22 21:51-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Write to
	the filehandle via the stream in -[PCDebugger putChar:].

2008-12-22 19:56-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Add code
	to write to the file desicriptor.

2008-12-22 18:36-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/ProjectCenter.gorm: Minor changes.
	* Framework/PCEditorManager.m: Cleanup.
	* Framework/PCProjectLauncher.m: Cleanup.
	* GNUmakefile: New module.
	* Headers/Protocols/CodeDebugger.h: New methods
	* Modules/Debuggers/ProjectCenter/GNUmakefile: Added debugger
	to resources.